# DocuRAG

./: .env.example  .gitignore  AGENTS.md  README.md  README_DEV.md  TODO.md  goal.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: agent.py  auth.py  documents.py  evaluation.py  health.py  rag.py
backend/app/core/: config.py
backend/app/schemas/: agent.py  auth.py  documents.py  evaluation.py  rag.py
backend/app/services/: agent.py  agent_tools.py  document_parser.py  document_storage.py  embedding.py  evaluation.py  llm.py  ocr.py  rag.py  rerank.py  vector_indexing.py  vector_store.py  vlm_input.py
backend/tests/: test_agent.py  test_agent_tools.py  test_auth.py  test_document_parser.py  test_document_schemas.py  test_documents.py  test_embedding.py  test_eval_dataset.py  test_evaluation.py  test_evaluation_api.py  test_health.py  test_llm.py  test_rag.py  test_rerank.py  test_vector_indexing.py  test_vector_store.py  test_vlm_input.py
docs/: LOCAL_DEV_SETUP.md  PRD.md  ROADMAP.md  api.md  architecture.md  db-schema.md  demo-script.md  phase-28-document-sources-auth-mode.pptx
frontend/: README.md  index.html  package-lock.json  package.json
infra/: docker-compose.yml
scripts/: check-dev-env.ps1  demo-smoke-test.ps1  ollama-embedding-smoke.ps1  qdrant-collection-smoke.ps1  retrieval-eval-smoke.ps1  seed-demo-data.ps1  test-backend.ps1
tasks/: _TEMPLATE.md  docs-agents-auto-push-authorization.md  docs-agents-readme-split-guidelines.md  docs-readme-image-refresh.md  phase-00.md  phase-01.md  (+2 more)
(+164 files in other folders)
