[project]
name = "docurag-agentops-backend"
version = "0.15.0"
description = "FastAPI backend for DocuRAG AgentOps."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]
real-ocr = [
  "paddleocr>=2.10,<2.11; python_version == '3.12'",
  "paddlepaddle-gpu==3.3.0; python_version == '3.12'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
